--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">MyLyceum</string>
     <string name="title_activity_main2">main2</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_news">Новости</string>
+    <string name="title_timetable">Расписание</string>
+    <string name="title_settings">Настройки</string>
 </resources>
