--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,17 @@
 <resources>
     <string name="app_name">MyLyceum</string>
+    <string name="signin">Вход</string>
     <string name="title_activity_main2">main2</string>
     <string name="title_news">Новости</string>
     <string name="title_timetable">Расписание</string>
     <string name="title_settings">Настройки</string>
+    <string name="title_activity_signup">Регистрация</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
